--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
-    "openai": "^6.3.0"
+    "openai": "^6.3.0",
+    "pino": "^10.0.0",
+    "pino-pretty": "^13.1.2"
   }
 }
